--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Armita Vajed Portfolio</title>
+    <title>Portfolio - Armita Vajed</title>
   </head>
   <body>
     <div class="d-flex bg-warning">
