Added some css to homepage

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
     ></script>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello World</h1>
-      <p>Hi There</p>
-      <i class="fab fa-instagram"></i>
+    <div class="hero">
+      <p>👋🏻 Hello I am</p>
+      <h1>Armita Vajed</h1>
+      <h2 class="mb-5">Front-end developer based in Iran</h2>
+      <a href="#" class="btn btn-branding">Contact me</a>
     </div>
   </body>
 </html>
