--- a/index.html
+++ b/index.html
@@ -35,7 +35,76 @@
       <p>👋🏻 Hello I am</p>
       <h1>Armita Vajed</h1>
       <h2 class="mb-5">Front-end developer based in Iran</h2>
-      <a href="#" class="btn btn-branding">Contact me</a>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
+    <p class="text-center m-5">
+      Featured Projects are my best projects I chose to show
+    </p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/Yogurt Project.png" class="img-fluid" alt="yogurt" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Yogurt Project</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline">
+              View detail project
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline">
+              View detail project
+            </a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/Weather App.png" class="img-fluid" alt="weather" />
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/Dictionary App.png"
+            class="img-fluid"
+            alt="dictionary"
+          />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Dictionary App</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline">
+              View detail project
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
