Edited weather app link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     <div class="hero">
-      <p>👋🏻 Hello I am</p>
+      <p>👋🏻 Hello, I am</p>
       <h1>Armita Vajed</h1>
       <h2 class="mb-5">Front-end developer based in Iran</h2>
       <div>
@@ -56,7 +56,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">
+            <a href="#" class="btn btn-branding-outline">
               View detail project
             </a>
           </div>
@@ -72,7 +72,10 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">
+            <a
+              href="https://quizzical-poitras-690cc6.netlify.app/"
+              class="btn btn-branding-outline"
+            >
               View detail project
             </a>
           </div>
@@ -99,7 +102,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">
+            <a href="#" class="btn btn-branding-outline">
               View detail project
             </a>
           </div>
