--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               large language ocean. A small river named Duden flows by
             </p>
             <a
-              href="https://quizzical-poitras-690cc6.netlify.app/"
+              href="https://zen-mcnulty-80a2bf.netlify.app/"
               class="btn btn-branding-outline"
             >
               View detail project
