added target blank to the link

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             </p>
             <a
               href="https://zen-mcnulty-80a2bf.netlify.app/"
+              target="_blank"
               class="btn btn-branding-outline"
             >
               View detail project
