--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">
-              View detail project
-            </a>
+            <a href="#" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
       </div>
@@ -77,7 +75,7 @@
               target="_blank"
               class="btn btn-branding-outline"
             >
-              View detail project
+              Learn more
             </a>
           </div>
         </div>
@@ -103,9 +101,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">
-              View detail project
-            </a>
+            <a href="#" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
       </div>
