Edited instagram link

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
             </p>
         <h3>Instagram</h3>
         <p>
-            <a href="https://www.instagram.com/nili_vjd_hjz" target="_blank">Nili_vjd_hjz</a>
+            <a href="https://www.instagram.com/nili_vjd_hjz/" target="_blank">@Nili_vjd_hjz</a>
             </p>
     </div>
   </body>
