--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
             </p>
         <h3>Twitter</h3>
         <p>
-            <a href="https://www.twitter.com/armita" target="_blank">@armita</a>
+            <a href="https://twitter.com/Nili_vjd" target="_blank">@armita</a>
             </p>
         <h3>Instagram</h3>
         <p>
