--- a/index.html
+++ b/index.html
@@ -131,6 +131,43 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div
+          class="
+            contact-box
+            d-flex
+            justify-content-between
+            mb-5
+            d-none d-md-flex
+          "
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">
+              Let's work together and I'll help you with all my best
+            </p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-3">Let's talk here</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:armita.vajed@gmail.com" class="email-link">
+            armita.vajed@gmail.com
+          </a>
+        </div>
+        <div class="social-links d-flex justify-content-center mb-5">
+          <a href="https://github.com/nili-vjd" target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a href="https://www.instagram.com/nili_vjd_hjz/" target="_blank">
+            <i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://twitter.com/Nili_vjd" target="_blank">
+            <i class="fab fa-twitter"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
