--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Armita is a front-end developer based in Iran."
+    />
     <title>Portfolio - Armita Vajed</title>
 
     <link
@@ -33,26 +37,30 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Armita logo"
+          />
           <img
             src="images/logo-small.jpeg"
             class="logo d-block d-md-none"
-            alt=""
+            alt="Armita logo"
           />
         </a>
         <ul>
           <li class="active">
-            <a href="/"> Home</a>
+            <a href="/" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html"> About</a>
+            <a href="/about.html" title="About Armita"> About</a>
           </li>
           <li>
-            <a href="/work.html"> Work</a>
+            <a href="/work.html" title="Armita's Work"> Work</a>
           </li>
           <li>
-            <a href="/contact.html"> Contact</a>
+            <a href="/contact.html" title="Contact Armita"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -62,7 +70,9 @@
       <h1>Armita Vajed</h1>
       <h2 class="mb-5">Front-end developer based in Iran</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding" title="Contact me"
+          >Contact me</a
+        >
       </div>
     </div>
     <p class="text-center m-5">
@@ -71,7 +81,11 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/Yogurt Project.png" class="img-fluid" alt="yogurt" />
+          <img
+            src="images/Yogurt Project.png"
+            class="img-fluid"
+            alt="Yogurt project preview"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -82,7 +96,9 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline"> Learn more </a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn more
+            </a>
           </div>
         </div>
       </div>
@@ -97,7 +113,7 @@
               large language ocean. A small river named Duden flows by
             </p>
             <a
-              href="https://zen-mcnulty-80a2bf.netlify.app/"
+              href="/work.html"
               target="_blank"
               class="btn btn-branding-outline"
             >
@@ -106,7 +122,11 @@
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/Weather App.png" class="img-fluid" alt="weather" />
+          <img
+            src="images/Weather App.png"
+            class="img-fluid"
+            alt="Weather app preview"
+          />
         </div>
       </div>
 
@@ -115,7 +135,7 @@
           <img
             src="images/Dictionary App.png"
             class="img-fluid"
-            alt="dictionary"
+            alt="Dictionary app preview"
           />
         </div>
         <div class="col">
@@ -127,7 +147,9 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline"> Learn more </a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn more
+            </a>
           </div>
         </div>
       </div>
@@ -142,31 +164,60 @@
           "
         >
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">
               Let's work together and I'll help you with all my best
             </p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-3">Let's talk here</a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact Armita"
+              >Let's talk here</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:armita.vajed@gmail.com" class="email-link">
+          <a
+            href="mailto:armita.vajed@gmail.com"
+            class="email-link"
+            title="Email Armita"
+          >
             armita.vajed@gmail.com
           </a>
         </div>
         <div class="social-links d-flex justify-content-center mb-5">
-          <a href="https://github.com/nili-vjd" target="_blank"
+          <a
+            href="https://github.com/nili-vjd"
+            target="_blank"
+            title="GitHub Profile"
             ><i class="fab fa-github"></i
           ></a>
-          <a href="https://www.instagram.com/nili_vjd_hjz/" target="_blank">
+          <a
+            href="https://www.instagram.com/nili_vjd_hjz/"
+            target="_blank"
+            title="Instagram Profile"
+          >
             <i class="fab fa-instagram"></i
           ></a>
-          <a href="https://twitter.com/Nili_vjd" target="_blank">
+          <a
+            href="https://twitter.com/Nili_vjd"
+            target="_blank"
+            title="Twitter Profile"
+          >
             <i class="fab fa-twitter"></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          ✌🏻 This project was coded by Armita, and it is
+          <a
+            href="https://github.com/nili-vjd/SheCodes-Portfolio-Project"
+            target="_blank"
+          >
+            open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
