--- a/index.html
+++ b/index.html
@@ -112,11 +112,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a
-              href="/work.html"
-              target="_blank"
-              class="btn btn-branding-outline"
-            >
+            <a href="/work.html" class="btn btn-branding-outline">
               Learn more
             </a>
           </div>
