Edited twitter account

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
             </p>
         <h3>Twitter</h3>
         <p>
-            <a href="https://twitter.com/Nili_vjd" target="_blank" title="Twitter Profile">@armita</a>
+            <a href="https://twitter.com/Nili_vjd" target="_blank" title="Twitter Profile">@Nili_vjd</a>
             </p>
         <h3>Instagram</h3>
         <p>
